# sepa-spikes

./: .gitignore  README.md  catalog-info.yaml
rust-go-cardless/: Cargo.toml  README.md
rust-go-cardless/public/: bank-accounts.html  billing-request.html  customers.html  index.css  index.html  mandates.html  payments.html  refunds.html
rust-go-cardless/public/src/: bank-accounts-service.js  bank-accounts.js  customer-service.js  customers.js  globals.js  mandate-service.js  mandates.js  payment-service.js  payments.js  refunds.js
rust-go-cardless/src/: customers.rs  gocardless.rs  main.rs  mandates.rs  payments.rs  refunds.rs
rust-stripe/: Cargo.toml  index.html
rust-stripe/public/: customers.html  immediate-payment.html  index.css  index.html  manual-payment.html  products.html  setup-payment.html
rust-stripe/public/src/: collect-debit-payment.js  customer.js  customers.js  globals.js  iban-copy.js  index.js  payment-details.js  payment-intent.js  product.js  products.js  setup-intent.js  stripe.js  subscription.js
rust-stripe/src/: app.rs  enums.rs  lib.rs  main.rs  routes.rs  stripe.rs  webhook.rs
