[package]
edition = "2021"
name = "rust-stripe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["json"]}
sauron = "0.49"
tokio = {version = "1", features = ["full"]}

[lib]
crate-type = ["cdylib"]
